samples/_failures_safe/1761195991_424087_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c497b0bc.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_c497b0bc.c:114:5: error: expected expression at end of input
  114 |     token->line =
      |     ^~~~~
./samples/SAFE/__tmp_c497b0bc.c:114:5: error: expected declaration or statement at end of input
